1997-11-26  Anthony Green  <green@hoser.cygnus.com>

	* gh_data.c (gh_set_substr): Strings can be longer than 256 bytes.

	* gh.h: Safely wrap prototypes for c++ usage.

1997-11-25  Mark Galassi  <rosalia@cygnus.com>

	* gh_test_repl.c (main_prog): changed invocation of gh_repl() to
	gh_repl (argc, argv).

1997-11-24  Mark Galassi  <rosalia@nis.lanl.gov>

	* gh_init.c (gh_repl): modified gh_repl() to accept argc and argv
	and to invoke scm_shell().
	(gh_launch_pad): took out the loading of boot-9.scm from here,
	since it is probably best to let the user control that.  In fact,
	gh_repl() now invokes scm_shell() which does that.

1997-11-23  Mark Galassi  <rosalia@cygnus.com>

	* gh_test_repl.c (main_prog): added argc and argv to the gh_repl()
	invocation.

1997-11-22  Tim Pierce  <twp@twp.tezcat.com>

	* dynl-dl.c (sysdep_dynl_func): Fix memory leak created by
	yesterday's underscore patch.  (Thanks to Marius Vollmer for
	spotting this.)

1997-11-21  Tim Pierce  <twp@twp.tezcat.com>

	* dynl-dl.c (sysdep_dynl_func): Prepend symb with underscore if
	DLSYM_ADDS_USCORE is not defined.

1997-11-17  Mark Galassi  <rosalia@nis.lanl.gov>

	* gh_data.c (gh_uniform_vector_length): 
	(gh_uniform_vector_ref): started implementing the uniform types in
	the gh_ interface.

1997-11-06  Mikael Djurfeldt  <mdj@nada.kth.se>

	* regex-posix.c (scm_free_regex_t): Return size of regex_t instead
	of 0; size_t --> scm_size_t.  Thanks to Bernard Urban.

1997-10-26  Mikael Djurfeldt  <mdj@nada.kth.se>

	* scmconfig.h.in: Updated (HAVE_LIBTERMCAP was added when
	configure.in was changed).

Sun Oct 26 02:20:11 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* Makefile.am (modinclude_HEADERS): Include readline.h here.
	* Makefile.in: Regenerated.

1997-10-25  Marius Vollmer  <mvo@zagadka.ping.de>

	* print.h (SCM_COERCE_OPORT): Renamed to SCM_COERCE_OUTPORT.  An
	OPORT is an `open' port, not an output port.

	* filesys.c (scm_close, set_element, get_element, scm_chown,