@@ -311,24 +311,34 @@ scm_fgets (port)
   if (feof (f))
     return NULL;
 
-  buf = (char *) scm_must_malloc (limit * sizeof(char), "fgets");
+  buf = (char *) malloc (limit * sizeof(char));
+
+  /* If a char has been pushed onto the port with scm_ungetc,
+     read that first. */
+  if (SCM_CRDYP (port))
+    {
+      buf[i] = SCM_CGETUN (port);
+      SCM_CLRDY (port);
+      if (buf[i++] == '\n')
+	{
+	  buf[i] = '\0';
+	  return buf;
+	}
+    }
 
   while (1) {
     p = buf + i;
     if (fgets (p, limit - i, f) == NULL) {
       if (i)
 	return buf;
-      scm_must_free (buf);
+      free (buf);
       return NULL;
     }
 
     if (strlen(p) < limit - i - 1)
       return buf;
 
-    buf = (char *) scm_must_realloc (buf,
-				     sizeof(char) * limit,
-				     sizeof(char) * limit * 2,
-				     "fgets");
+    buf = (char *) realloc (buf, sizeof(char) * limit * 2);
 
     i = limit - 1;
     limit *= 2;
