@@ -138,6 +138,31 @@ scm_read_delimited_x (delims, buf, gobble, port, start, end)
   return scm_cons (SCM_BOOL_F, scm_long2num (j - cstart));
 }
 
+/*
+ * %read-line uses a port's fgets method for fast line i/o.
+ * For %read-line to replace read-line, it will have to take these options:
+ *
+ *	%READ-LINE [PORT [HANDLE-DELIM]]
+ *
+ * HANDLE-DELIM instructs %READ-LINE how to handle line delimiter
+ * characters, and must be one of the symbols `trim', `concat',
+ * `split', `peek'.  If it is `trim' (the default), the line delimiter
+ * is read from the port and discarded.  If it is `concat', the
+ * delimiter is read from the port and appended to the string.  If it
+ * is `split', the delimiter is read from the port, and %READ-LINE
+ * returns a pair consisting of the line read and the delimiter
+ * character.  If it is `peek', the delimiter is not read from the
+ * port at all.
+ *
+ * Complicating all this, boot-9's READ-LINE function uses the value
+ * of SCM-LINE-INCREMENTORS to delimit lines.  That means that Guile
+ * programmers could potentially read records delimited by arbitrary
+ * characters by changing the value of SCM-LINE-INCREMENTORS and then
+ * calling READ-LINE.  If we are to take advantage of fgets(3), we
+ * can't afford this luxury.  %READ-LINE will be limited to processing
+ * newline-delimited records.
+ */
+
 SCM_PROC (s_read_line, "%read-line", 0, 1, 0, scm_read_line);
 
 SCM
@@ -145,6 +170,7 @@ scm_read_line (port)
      SCM port;
 {
   char *s;
+  SCM line;
 
   if (SCM_UNBNDP (port))
     port = scm_cur_inp;
@@ -155,7 +181,14 @@ scm_read_line (port)
     }
 
   s = scm_do_read_line (port);
-  return (s == NULL ? SCM_EOF_VAL : scm_makfrom0str (s));
+  if (s == NULL)
+    line = SCM_EOF_VAL;
+  else
+    {
+      line = scm_makfrom0str (s);
+      free (s);
+    }
+  return line;
 }
 
 SCM_PROC (s_write_line, "write-line", 1, 1, 0, scm_write_line);
